# TaskManager-Flask

./: .gitignore  .replit  README.md  app.py  config.py  email_service.py  extensions.py  forms.py  models.py  pyproject.toml  replit.md  requirements.txt  routes.py  scheduler.py  utils.py
static/css/: style.css
templates/: analytics.html  base.html  dashboard.html  login.html  register.html  task_form.html  users.html
